
[tool.poetry]
name = "eyeonwater"
version = "2.5.15"
description = "EyeOnWater HomeAssistant Integration."
authors = []
license = "MIT"
readme = "README.md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8.5"
tenacity = "^8.2.3"
pytz = "^2023.3"
python-dateutil = "^2.8.2"
pydantic = "<2"
pyonwater = "0.3.15"

[tool.poetry.group.dev.dependencies]
types-pytz = "^2023.3.0.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.4"
pytest-asyncio = "^0.21"
pytest-cov = "^4.1"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
target-version = ["py39", "py310"]
exclude = 'generated'

[tool.isort]
profile = "black"
force_sort_within_sections = true
known_first_party = [
    "homeassistant",
]
combine_as_imports = true

[tool.ruff]
select = [
    "ALL",
    "D",  # pydocstyle
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # flake8
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "A",  # prevent using keywords that clobber python builtins
    "ISC",  # implicit string concatenation
    "UP",  # alert you when better syntax is available in your python version
    "RUF",  # the ruff developer's own rules
    "C90", # mccabe
    "I", # isort
    "N", # pep8-naming
    "YTT", # flake8-2020
    "ANN", # flake8-annotations
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "B905",  # ignore zip() without an explicit strict= parameter, only support with python >3.10
]
fixable = [
    "ALL",
    "F401",  # Remove unused imports.
    "NPY001",  # Fix numpy types, which are removed in 1.24.
    "RUF100",  # Remove unused noqa comments.
]

[tool.ruff.per-file-ignores]
"tests/*.py" = ["D1"]

[tool.mypy]
plugins = ["pydantic.mypy"]
strict = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
show_error_codes = true
implicit_reexport = true
