
[tool.poetry]
name = "eyeonwater"
version = "2.5.15"
description = "EyeOnWater HomeAssistant Integration."
authors = []
license = "MIT"
readme = "README.md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
aiohttp = "^3.8.5"
tenacity = "^8.2.3"
pytz = "^2023.3"
python-dateutil = "^2.8.2"
pydantic = "^2"
pyonwater = "0.3.22"

[tool.poetry.group.dev.dependencies]
types-pytz = "^2025.2.0.20251108"

[tool.poetry.group.test.dependencies]
homeassistant = "2026.2.2"
pytest = ">=9.0"
pytest-asyncio = ">=1.0"
pytest-cov = ">=7.0"

[tool.black]
target-version = ["py312"]
line-length = 88
exclude = '''
/(
    \.venv
  | \.git
  | __pycache__
  | \.eggs
  | \*.egg-info
  | generated
)/
'''

[tool.isort]
profile = "black"
force_sort_within_sections = true
known_first_party = [
    "homeassistant",
]
combine_as_imports = true
skip = [".venv", ".git", "__pycache__", "*.egg-info"]

[tool.ruff]
line-length = 88
exclude = [
    ".venv",
    ".git",
    "__pycache__",
    "*.egg-info",
]
select = [
    "ALL",
    "D",  # pydocstyle
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # flake8
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "A",  # prevent using keywords that clobber python builtins
    "ISC",  # implicit string concatenation
    "UP",  # alert you when better syntax is available in your python version
    "RUF",  # the ruff developer's own rules
    "C90", # mccabe
    "I", # isort
    "N", # pep8-naming
    "YTT", # flake8-2020
    "ANN", # flake8-annotations
]
ignore = [
    "B008",  # do not perform function calls in argument defaults
    "B905",  # ignore zip() without an explicit strict= parameter, only support with python >3.10
]
fixable = [
    "ALL",
    "F401",  # Remove unused imports.
    "NPY001",  # Fix numpy types, which are removed in 1.24.
    "RUF100",  # Remove unused noqa comments.
]

[tool.ruff.per-file-ignores]
"tests/*.py" = ["D1", "SLF001", "PLW0621"]

[tool.mypy]
plugins = ["pydantic.mypy"]
strict = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
show_error_codes = true
implicit_reexport = true
exclude = [".venv", "__pycache__", ".eggs", "*.egg-info"]

[tool.pylint.MASTER]
ignore-paths = [".venv"]

[tool.pylint."messages control"]
disable = [
    "W0621",  # pytest fixture injection always shadows outer-scope names
    "W0212",  # tests intentionally access private members of the class under test
]

[tool.pyright]
reportPrivateUsage = "none"  # tests intentionally access private members

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
pythonpath = ["."]
asyncio_mode = "strict"

[tool.coverage.run]
source = ["custom_components/eyeonwater", "tests"]
omit = ["*/site-packages/*", "*/.venv/*", "tests/conftest.py"]

[tool.coverage.report]
omit = ["*/site-packages/*", "*/.venv/*", "tests/conftest.py"]
show_missing = true
